--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,6 @@
 .card {
     width: 40px;
-    height: 40px;
+    min-height: 40px;
     border: 1px solid #aaa;
     display: block;
     position: relative;
