proper styling for root and children components

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,6 +3,9 @@
     min-height: 40px;
     border: 1px solid #aaa;
     display: block;
-    position: relative;
+    margin-left: 40px;
+}
+
+.children {
     margin-left: 40px;
 }
